--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Combine glyph (SDF) PBFs on the fly.",
   "main": "index.js",
   "dependencies": {
-    "protocol-buffers": "^2.4.7"
+    "pbf": "^2.0.1",
+    "protocol-buffers": "^2.4.7",
+    "protocol-buffers-schema": "^3.1.0"
   },
   "devDependencies": {
     "benchmark": "^1.0.0",
